@@ -9,6 +9,7 @@
  - Fixed problems with RPM packaging.
  - Lets you check whether a prepared statement has been defined.
  - "Varargs" prepared statements.
+ - Unnamed prepared statements now supported.
 3.0
  - Website is now at http://pqxx.org/ (no redirects)
  - Completely replaced cursor classes
